  * rm TODO items that no one will likely implement, and add ones that
    I intend to
  * WHICHPACKAGE: use apt-file and dpkg instead of custom implementation
    to search for package content
    * local implementation could not use path as search term if package
      is not installed
    * it could also not work offline if the package is not installed
    Closes: #422500, LP: #141520

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 01 May 2011 02:23:24 +0200

wajig (2.1) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]
  * Change versioning from 3 digits to 2. There wasn't much meaning there.
  * Remove gjig; it was more an experiment than a serious app, and:
    - more complete alternatives exist (e.g. synaptic and software-center)
    - UI is cranky and weird
  * Remove deps that were needed by gjig:
    - python-gtk2, python-glade2, python-gnome2, and gnome-terminal
  * INSTALLR, INSTALLRS: 'apt-get install' now installs Recommends by default,
    making these options redundant.
  * INSTALL, INSTALLS: add -r|--recommends and -R|--norecommends options.
  * INSTALLS: add -n|--noauth and -y|--yes options.
  * Add meself to Uploaders field in debian/control.
  * CHANGELOG: change -x to -P; it's a more meaningful short option for --pager
  * POLICY: more than one person has complained about removal of the alias of
    this command, AVAILABLE; I put it back.
  * SHOW: add -f|--fast to offer apt-cache's much faster implementation
  * INSTALL/DIST: fix brokenness, fixes LP: #540740.
  * SOURCE: don't run the command unless 'dpkg-dev' is installed,
    fixes LP: #662018
  * BUILD, BUILDDEP: add -y|--yes and -n|--noauth options.
  * AUTOREMOVE: add back after more than one request. (Closes: #590089)
  * Add --dist, an alias for apt-get -t|--target-release.
  * Slightly simplify the build: getting rid of dynamic bash completion
    generator.
  * Fix a Lintian complaint (add dependency on python).
